--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'scala'
 
 version = "0.1.0"
 group = "net.retvoid.pressurizeddefence" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "PressurizedDefense"
+archivesBaseName = "PressurizedDefense-1.12"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
